UPDATES for AssignmentFour - TipCalculator

--- a/AssignmentFour/TipCalculator/TipCalculator/TipCalculator/TipCalculator.csproj
+++ b/AssignmentFour/TipCalculator/TipCalculator/TipCalculator/TipCalculator.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TipInfo.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
   </ItemGroup>
 </Project>
